--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 <body>
   <div class="container">
     <div class="header">
-      <!-- ✅ Fixed image tag -->
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="https://upload.wikimedia.org/wikipedia/en/3/3a/Lovely_Professional_University_logo.png" alt="Lovely Professional University Logo" width="100">
+
       <h1>Hello, user</h1>
     </div>
     <div class="chat" id="chat">
