--- a/index.html
+++ b/index.html
@@ -1,4 +1,150 @@
-  @media (max-width: 768px) {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LPU Chat</title>
+  <style>
+    :root {
+      --primary: #ffa500;
+      --secondary: #ffa500;
+      --user-bg: #ffa500;
+      --bot-bg: #2a2a2a;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #121212;
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      position: relative;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 900px;
+      margin: 2rem auto;
+      background: #1e1e1e;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      height: 80vh;
+    }
+
+    .header {
+      text-align: center;
+      padding: 2rem 1rem 1rem;
+    }
+
+    .header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      background: linear-gradient(to right, var(--primary), var(--secondary));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .logo {
+      display: block;
+      margin: 0 auto 1rem;
+      width: 80px;
+      border-radius: 0.5rem;
+    }
+
+    .chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .message {
+      max-width: 70%;
+      padding: 0.8rem 1.2rem;
+      border-radius: 1.2rem;
+      line-height: 1.5;
+      word-wrap: break-word;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    .user {
+      align-self: flex-end;
+      background: var(--user-bg);
+      color: #fff;
+      border-bottom-right-radius: 0.3rem;
+    }
+
+    .bot {
+      align-self: flex-start;
+      background: var(--bot-bg);
+      color: #eee;
+      border-bottom-left-radius: 0.3rem;
+    }
+
+    .input-area {
+      display: flex;
+      gap: 1rem;
+      padding: 1rem;
+      border-top: 1px solid #333;
+      background: #1e1e1e;
+    }
+
+    input {
+      flex: 1;
+      padding: 0.8rem 1rem;
+      border-radius: 2rem;
+      border: 1px solid #555;
+      background: #2c2c2c;
+      color: #fff;
+      outline: none;
+    }
+
+    button {
+      padding: 0.8rem 1.5rem;
+      border: none;
+      border-radius: 2rem;
+      background: linear-gradient(to right, var(--primary), var(--secondary));
+      color: #fff;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    .contributors-box {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: #1e1e1e;
+      border: 1px solid #333;
+      padding: 10px;
+      width: 120px;
+      text-align: center;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #000000;
+      font-size: 0.9rem;
+    }
+
+    .contributors-box h2 {
+      margin-bottom: 8px;
+      font-size: 1rem;
+      color: #ffa500;
+    }
+
+    .contributors-box p {
+      margin: 4px 0;
+    }
+    @media (max-width: 768px) {
     .contributors-box {
       position: fixed;
       bottom: 20px;
@@ -36,3 +182,82 @@
       display: block;
     }
   }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="header">
+      <h1>Hello, user</h1>
+    </div>
+
+    <div class="chat" id="chat">
+      <div class="message user">Hi! Can I ask you something?</div>
+      <div class="message bot">Yes, I am your Mindfulness Coach and always willing to help you!!</div>
+    </div>
+
+    <form class="input-area" id="chatForm">
+      <input type="text" id="input" placeholder="Type your message..." autocomplete="off" required />
+      <button type="submit">Send</button>
+    </form>
+  </div>
+
+  <div class="contributors-box">
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/3/3a/Lovely_Professional_University_logo.png" alt="Lovely Professional University Logo">
+    <h2>Contributors</h2>
+    <p>Rai 12303277</p>
+    <p>Adarsh 12310531</p>
+    <p>Suraj 12323150</p>
+  </div>
+
+  <script>
+    const chat = document.getElementById("chat");
+    const form = document.getElementById("chatForm");
+    const input = document.getElementById("input");
+
+    const API_KEY = 'AIzaSyDudnt6l_RVPTuwnnj0VqrtLq8WVDewrMY';
+    const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`;
+
+    let chatHistory = [];
+
+    const addMessage = (text, isUser) => {
+      const div = document.createElement("div");
+      div.className = `message ${isUser ? "user" : "bot"}`;
+      div.textContent = text;
+      chat.appendChild(div);
+      chat.scrollTop = chat.scrollHeight;
+    };
+
+    const getBotResponse = async (userText) => {
+      chatHistory.push({ role: "user", parts: [{ text: userText }] });
+
+      try {
+        const res = await fetch(API_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ contents: chatHistory })
+        });
+
+        if (!res.ok) throw new Error('Network response was not ok');
+
+        const data = await res.json();
+        const reply = data?.candidates?.[0]?.content?.parts?.[0]?.text || "You are offline dear.";
+        chatHistory.push({ role: "model", parts: [{ text: reply }] });
+        addMessage(reply, false);
+      } catch (err) {
+        console.error('Error:', err);
+        addMessage("Error fetching response. Try again later.", false);
+      }
+    };
+
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
+      const userText = input.value.trim();
+      if (!userText) return;
+      addMessage(userText, true);
+      input.value = "";
+      getBotResponse(userText);
+    });
+  </script>
+</body>
+</html>
